force-app/main/default/objects/Order/fields/AccountProfile__c.field-meta.xml
<CustomField>
    <fullName>AccountProfile__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Account Profile</label>
    <referenceTo>AccountProfile__c</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>