force-app/main/default/objects/Order/fields/AnnualMileage__c.field-meta.xml
<CustomField>
    <fullName>AnnualMileage__c</fullName>
    <description>Annual mileage</description>
    <label>Annual Mileage</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>