force-app/main/default/objects/Order/fields/AppliedForFinancingIndicator__c.field-meta.xml
<CustomField>
    <fullName>AppliedForFinancingIndicator__c</fullName>
    <description>Indicates if the customer applied for financing</description>
    <label>Applied For Financing Indicator</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ExampleA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>