force-app/main/default/objects/Order/fields/BuildWeek__c.field-meta.xml
<CustomField>
    <fullName>BuildWeek__c</fullName>
    <description>Build week</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Build Week</label>
    <type>Date</type>
</CustomField>