force-app/main/default/objects/Order/fields/CancellationReason__c.field-meta.xml
<CustomField>
    <fullName>CancellationReason__c</fullName>
    <description>Cancellation reason description</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Cancellation Reason</label>
    <type>TextArea</type>
</CustomField>