force-app/main/default/objects/Order/fields/CancelledDate__c.field-meta.xml
<CustomField>
    <fullName>CancelledDate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Cancelled Date</label>
    <type>DateTime</type>
</CustomField>