force-app/main/default/objects/Order/fields/CatalogId__c.field-meta.xml
<CustomField>
    <fullName>CatalogId__c</fullName>
    <description>GFORCE CatalogID associated with the vehicle line</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Catalog ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>