force-app/main/default/objects/Order/fields/ConsentStatus__c.field-meta.xml
<CustomField>
    <fullName>ConsentStatus__c</fullName>
    <description>Consent consent status</description>
    <label>Consent Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Example</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>