force-app/main/default/objects/Order/fields/ConsentStatusUpdatedDate__c.field-meta.xml
<CustomField>
    <fullName>ConsentStatusUpdatedDate__c</fullName>
    <description>Indicates  when customer consent status was last updated</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Consent Status Updated Date</label>
    <type>Date</type>
</CustomField>