force-app/main/default/objects/Order/fields/ContractId__c.field-meta.xml
<CustomField>
    <fullName>ContractId__c</fullName>
    <description>Contract identifier</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Contract ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>