force-app/main/default/objects/Order/fields/CreatedDate__c.field-meta.xml
<CustomField>
    <fullName>CreatedDate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Created Date</label>
    <type>DateTime</type>
</CustomField>