force-app/main/default/objects/Order/fields/CustomsClearanceDate__c.field-meta.xml
<CustomField>
    <fullName>CustomsClearanceDate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Customs Clearance Date</label>
    <type>DateTime</type>
</CustomField>