force-app/main/default/objects/Order/fields/DealerActionDate__c.field-meta.xml
<CustomField>
    <fullName>DealerActionDate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Dealer Action Date</label>
    <type>DateTime</type>
</CustomField>