force-app/main/default/objects/Order/fields/DealerAdjustmentPrice__c.field-meta.xml
<CustomField>
    <fullName>DealerAdjustmentPrice__c</fullName>
    <description>Dealer adjustment price</description>
    <label>Dealer Adjustment Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>