force-app/main/default/objects/Order/fields/DealerAdjustmentType__c.field-meta.xml
<CustomField>
    <fullName>DealerAdjustmentType__c</fullName>
    <description>Dealer adjustment type</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Dealer Adjustment Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>