force-app/main/default/objects/Order/fields/DealerOnTheRoadPrice__c.field-meta.xml
<CustomField>
    <fullName>DealerOnTheRoadPrice__c</fullName>
    <description>Dealer on the road price</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Dealer On The Road Price</label>
    <length>50</length>
    <type>Text</type>
</CustomField>