force-app/main/default/objects/Order/fields/DealerOnTheRoadTotalPrice__c.field-meta.xml
<CustomField>
    <fullName>DealerOnTheRoadTotalPrice__c</fullName>
    <description>Total Dealer on the road price</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Dealer On The Road Total Price</label>
    <length>50</length>
    <type>Text</type>
</CustomField>