force-app/main/default/objects/Order/fields/DealerOrderId__c.field-meta.xml
<CustomField>
    <fullName>DealerOrderId__c</fullName>
    <description>dealer order identifier</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Dealer Order ID</label>
    <length>5</length>
    <type>Text</type>
</CustomField>