force-app/main/default/objects/Order/fields/DealerOtherDepositPrice__c.field-meta.xml
<CustomField>
    <fullName>DealerOtherDepositPrice__c</fullName>
    <description>Additional deposit paid to the dealer</description>
    <label>Dealer Other Deposit Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>