force-app/main/default/objects/Order/fields/DealerRefundAmount__c.field-meta.xml
<CustomField>
    <fullName>DealerRefundAmount__c</fullName>
    <description>Dealer refund amount</description>
    <label>Dealer Refund Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>