force-app/main/default/objects/Order/fields/DealerRefundDate__c.field-meta.xml
<CustomField>
    <fullName>DealerRefundDate__c</fullName>
    <description>Dealer refund date</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Dealer Refund Date</label>
    <type>Date</type>
</CustomField>