force-app/main/default/objects/Order/fields/DealerSellerAmount__c.field-meta.xml
<CustomField>
    <fullName>DealerSellerAmount__c</fullName>
    <description>Dealer selling amount</description>
    <label>Dealer Seller Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>