force-app/main/default/objects/Order/fields/Dealership__c.field-meta.xml
<CustomField>
    <fullName>Dealership__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dealership</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Please select Account of correct type: Dealership Account</errorMessage>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Dealer</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>