force-app/main/default/objects/Order/fields/DeductibleAmount__c.field-meta.xml
<CustomField>
    <fullName>DeductibleAmount__c</fullName>
    <description>Deductible amount</description>
    <label>Deductible Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>