force-app/main/default/objects/Order/fields/DepositCurrencyCode__c.field-meta.xml
<CustomField>
    <fullName>DepositCurrencyCode__c</fullName>
    <description>Currency code of the deposit</description>
    <label>Deposit Currency Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Example A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>