force-app/main/default/objects/Order/fields/EstimatedCashPrice__c.field-meta.xml
<CustomField>
    <fullName>EstimatedCashPrice__c</fullName>
    <description>Estimated cash price of the vehicle</description>
    <label>Estimated Cash Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>