force-app/main/default/objects/Order/fields/ETAEndDate__c.field-meta.xml
<CustomField>
    <fullName>ETAEndDate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ETA End Date</label>
    <type>Date</type>
</CustomField>