force-app/main/default/objects/Order/fields/ETAStartDate__c.field-meta.xml
<CustomField>
    <fullName>ETAStartDate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ETA Start Date</label>
    <type>Date</type>
</CustomField>