force-app/main/default/objects/Order/fields/EventTypeCode__c.field-meta.xml
<CustomField>
    <fullName>EventTypeCode__c</fullName>
    <description>Event Type Code value</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Event Type Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>