force-app/main/default/objects/Order/fields/FinanceApplicationId__c.field-meta.xml
<CustomField>
    <fullName>FinanceApplicationId__c</fullName>
    <description>Finance application id</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Finance Application ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>