force-app/main/default/objects/Order/fields/FinanceApplicationQuote__c.field-meta.xml
<CustomField>
    <fullName>FinanceApplicationQuote__c</fullName>
    <description>Finance application quote</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Finance Application Quote</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>