force-app/main/default/objects/Order/fields/FinanceApplicationStatus__c.field-meta.xml
<CustomField>
    <fullName>FinanceApplicationStatus__c</fullName>
    <description>Finance application status</description>
    <label>Finance Application Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Example</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>