force-app/main/default/objects/Order/fields/FinanceApplicationUpdateDate__c.field-meta.xml
<CustomField>
    <fullName>FinanceApplicationUpdateDate__c</fullName>
    <description>Indicates the date the finance application was updated</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Finance Application Update Date</label>
    <type>Date</type>
</CustomField>