force-app/main/default/objects/Order/fields/FinanceProcessAction__c.field-meta.xml
<CustomField>
    <fullName>FinanceProcessAction__c</fullName>
    <description>Finance process action</description>
    <label>Finance Process Action</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Example</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>