force-app/main/default/objects/Order/fields/FinanceProductType__c.field-meta.xml
<CustomField>
    <fullName>FinanceProductType__c</fullName>
    <description>Finance product type</description>
    <label>Finance Product Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Example</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>