force-app/main/default/objects/Order/fields/FinanceProvider__c.field-meta.xml
<CustomField>
    <fullName>FinanceProvider__c</fullName>
    <description>Finance provider</description>
    <label>Finance Provider</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Example</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>