force-app/main/default/objects/Order/fields/ImageURL__c.field-meta.xml
<CustomField>
    <fullName>ImageURL__c</fullName>
    <description>Image url</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Image URL</label>
    <type>Url</type>
</CustomField>