force-app/main/default/objects/Order/fields/ItemNumber__c.field-meta.xml
<CustomField>
    <fullName>ItemNumber__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Item Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>