force-app/main/default/objects/Order/fields/MarketRegion__c.field-meta.xml
<CustomField>
    <fullName>MarketRegion__c</fullName>
    <description>Market region</description>
    <label>Market Region</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Example A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>