force-app/main/default/objects/Order/fields/MemberId__c.field-meta.xml
<CustomField>
    <fullName>MemberId__c</fullName>
    <description>Member ID associated with the Customer GUID</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Member ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>