force-app/main/default/objects/Order/fields/NonDealerizedPrice__c.field-meta.xml
<CustomField>
    <fullName>NonDealerizedPrice__c</fullName>
    <description>Non dealerized price of the vehicle</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Non Dealerized Price</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>