force-app/main/default/objects/Order/fields/OrbitNumber__c.field-meta.xml
<CustomField>
    <fullName>OrbitNumber__c</fullName>
    <description>orbit number</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Orbit Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>