force-app/main/default/objects/Order/fields/OrderConvertedCode__c.field-meta.xml
<CustomField>
    <fullName>OrderConvertedCode__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Order conversion code</description>
    <label>Order Converted Code</label>
    <type>Checkbox</type>
</CustomField>