force-app/main/default/objects/Order/fields/OrderConvertedDate__c.field-meta.xml
<CustomField>
    <fullName>OrderConvertedDate__c</fullName>
    <description>Reservation to Order conversion date</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Order Converted Date</label>
    <type>DateTime</type>
</CustomField>