force-app/main/default/objects/Order/fields/OrderId__c.field-meta.xml
<CustomField>
    <fullName>OrderId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Order Id</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>