force-app/main/default/objects/Order/fields/OrderPlacedLanguage__c.field-meta.xml
<CustomField>
    <fullName>OrderPlacedLanguage__c</fullName>
    <description>Order placed language</description>
    <label>Order Placed Language</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Example</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>