force-app/main/default/objects/Order/fields/PaymentCardLast4__c.field-meta.xml
<CustomField>
    <fullName>PaymentCardLast4__c</fullName>
    <description>Last 4 digits of payment credit card</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Payment Card Last 4 Digits</label>
    <length>5</length>
    <type>Text</type>
</CustomField>