force-app/main/default/objects/Order/fields/PaymentCardType__c.field-meta.xml
<CustomField>
    <fullName>PaymentCardType__c</fullName>
    <description>Payment card type</description>
    <label>Payment Card Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Example A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>