force-app/main/default/objects/Order/fields/PreApprovalAmount__c.field-meta.xml
<CustomField>
    <fullName>PreApprovalAmount__c</fullName>
    <description>Pre approval amount</description>
    <label>Pre Approval Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>