force-app/main/default/objects/Order/fields/PreApprovalFlag__c.field-meta.xml
<CustomField>
    <fullName>PreApprovalFlag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag indicating if the customer is preapproved</description>
    <label>Pre Approval Flag</label>
    <type>Checkbox</type>
</CustomField>