force-app/main/default/objects/Order/fields/PreOrderTypeCode__c.field-meta.xml
<CustomField>
    <fullName>PreOrderTypeCode__c</fullName>
    <description>Pre-order/Reservation type code</description>
    <label>Pre Order Type Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Example A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>