force-app/main/default/objects/Order/fields/PromoDealerPrice__c.field-meta.xml
<CustomField>
    <fullName>PromoDealerPrice__c</fullName>
    <description>Promotional price offered by the dealer</description>
    <label>Promo Dealer Price</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>