force-app/main/default/objects/Order/fields/RefundStatusCode__c.field-meta.xml
<CustomField>
    <fullName>RefundStatusCode__c</fullName>
    <description>Refund status code</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Refund Status Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>