force-app/main/default/objects/Order/fields/RegistrationDate__c.field-meta.xml
<CustomField>
    <fullName>RegistrationDate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Registration Date</label>
    <type>DateTime</type>
</CustomField>