force-app/main/default/objects/Order/fields/RegistrationNumber__c.field-meta.xml
<CustomField>
    <fullName>RegistrationNumber__c</fullName>
    <description>registration number</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Registration Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>