force-app/main/default/objects/Order/fields/ReservationDepositPrice__c.field-meta.xml
<CustomField>
    <fullName>ReservationDepositPrice__c</fullName>
    <description>Deposit price of the reservation</description>
    <label>Reservation Deposit Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>