force-app/main/default/objects/Order/fields/TotalDealerPrice__c.field-meta.xml
<CustomField>
    <fullName>TotalDealerPrice__c</fullName>
    <description>Total Dealer price of the vehicle</description>
    <label>Total Dealer Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>