force-app/main/default/objects/Order/fields/TotalIncentive__c.field-meta.xml
<CustomField>
    <fullName>TotalIncentive__c</fullName>
    <description>Total amount of incentives</description>
    <label>Total Incentive</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>