force-app/main/default/objects/Order/fields/TradeInIndicator__c.field-meta.xml
<CustomField>
    <fullName>TradeInIndicator__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Trade In Indicator</label>
    <type>Checkbox</type>
</CustomField>