force-app/main/default/objects/Order/fields/TradeInVehicleBalanceOwed__c.field-meta.xml
<CustomField>
    <fullName>TradeInVehicleBalanceOwed__c</fullName>
    <description>Balance owed on the Trade in vehicle</description>
    <label>Trade In Vehicle Balance Owed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>