force-app/main/default/objects/Order/fields/TradeInVehicleEngineType__c.field-meta.xml
<CustomField>
    <fullName>TradeInVehicleEngineType__c</fullName>
    <description>Engine type of Trade-in vehicle</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Trade In Vehicle Engine Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>