force-app/main/default/objects/Order/fields/TradeInVehicleMake__c.field-meta.xml
<CustomField>
    <fullName>TradeInVehicleMake__c</fullName>
    <description>Make of Trade in Vehicle</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Trade In Vehicle Make</label>
    <length>20</length>
    <type>Text</type>
</CustomField>