force-app/main/default/objects/Order/fields/TradeInVehicleModel__c.field-meta.xml
<CustomField>
    <fullName>TradeInVehicleModel__c</fullName>
    <description>Model of Trade-in vehicle</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Trade In Vehicle Model</label>
    <length>100</length>
    <type>Text</type>
</CustomField>