force-app/main/default/objects/Order/fields/TradeInVehicleTransmissionType__c.field-meta.xml
<CustomField>
    <fullName>TradeInVehicleTransmissionType__c</fullName>
    <description>Transimission type of Trade-in vehicle</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Trade In Vehicle Transmission Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>