force-app/main/default/objects/Order/fields/TradeInVehicleVIN__c.field-meta.xml
<CustomField>
    <fullName>TradeInVehicleVIN__c</fullName>
    <description>VIN of the Trade-In Vehicle</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Trade In Vehicle VIN</label>
    <length>50</length>
    <type>Text</type>
</CustomField>