force-app/main/default/objects/Order/fields/VehicleDescription__c.field-meta.xml
<CustomField>
    <fullName>VehicleDescription__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Vehicle Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>