force-app/main/default/objects/Order/fields/VehicleSoldDate__c.field-meta.xml
<CustomField>
    <fullName>VehicleSoldDate__c</fullName>
    <description>Date the order was created</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Vehicle Sold Date</label>
    <type>DateTime</type>
</CustomField>