force-app/main/default/objects/Order/fields/VIN__c.field-meta.xml
<CustomField>
    <fullName>VIN__c</fullName>
    <description>Vehicle identification number</description>
    <encryptionScheme>None</encryptionScheme>
    <label>VIN</label>
    <length>20</length>
    <type>Text</type>
</CustomField>