force-app/main/default/objects/Order/recordTypes/Order.recordType-meta.xml
<RecordType>
    <fullName>Order</fullName>
    <active>true</active>
    <label>Order</label>
</RecordType>