force-app/main/default/objects/Order/listViews/Customer_Order.listView-meta.xml
<ListView>
    <fullName>Customer_Order</fullName>
    <columns>ORDERS.ORDER_NUMBER</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>ORDERS.EFFECTIVE_DATE</columns>
    <columns>ORDERS.TOTAL_AMOUNT</columns>
    <columns>ORDERS.STATUS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ORDERS.TYPE</field>
        <operation>equals</operation>
        <value>Web</value>
    </filters>
    <label>Customer Order</label>
</ListView>